--- a/golf/fusion/data_loader.ipynb
+++ b/golf/fusion/data_loader.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "bbb2b734",
    "metadata": {},
    "outputs": [
@@ -1281,7 +1281,7 @@
     "        if not kp_dir.exists(): continue\n",
     "        for csv_path in kp_dir.glob('*.csv'):\n",
     "            vid_id = csv_path.stem\n",
-    "            if any(vd.glob(f\"{vid_id}*_crop.mp4\") for vd in vid_dirs):\n",
+    "            if any(vd.glob(f\"{vid_id}*.mp4\") for vd in vid_dirs):\n",
     "                ids.append(vid_id)\n",
     "    if not ids:\n",
     "        raise RuntimeError(f\"No matching CSV↔MP4 under {ROOT}\")\n",
@@ -1361,11 +1361,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "▶ 41 test IDs saved to D:\\Jabez\\golf\\fusion\\test_ids.txt\n",
-      "▶ PKL created: test=41 entries at D:\\golfDataset\\dataset\\test\\crop_pkl\\skeleton_dataset_test.pkl\n",
-      "[RUN] conda run -n timesformer --no-capture-output python -u extract_embedding_timesformer.py --root D:\\golfDataset\\dataset\\test --test-list D:\\Jabez\\golf\\fusion\\test_ids.txt --num-frames 32 --clips-per-vid 5 --img-size 224 --batch-size 1 --num-workers 0 --pretrained D:\\TimeSformer\\pretrained\\TimeSformer_divST_96x4_224_K600.pyth --output-dir embbeding_data\\timesformer\n",
-      "[RUN] conda run -n mmaction --no-capture-output python -u D:\\Jabez\\golf\\fusion\\extract_embedding_stgcn.py --cfg D:\\mmaction2\\configs\\skeleton\\stgcnpp\\my_stgcnpp.py --ckpt D:\\mmaction2\\checkpoints\\stgcnpp_8xb16-joint-u100-80e_ntu60-xsub-keypoint-2d_20221228-86e1e77a.pth --device cuda:0 --out-dir D:\\Jabez\\golf\\fusion\\embbeding_data\\stgcnpp --test-pkl D:\\golfDataset\\dataset\\test\\crop_pkl\\skeleton_dataset_test.pkl --num-workers 0\n",
-      "✅ All done.\n"
+      "▶ 281 test IDs saved to D:\\Jabez\\golf\\fusion\\ids_txt\\test_ids.txt\n",
+      "▶ PKL created: test=281 entries at D:\\golfDataset\\dataset\\test\\crop_pkl\\skeleton_dataset_test.pkl\n",
+      "[RUN] conda run -n timesformer --no-capture-output python -u extract_embedding_timesformer.py --root D:\\golfDataset\\dataset\\test --test-list D:\\Jabez\\golf\\fusion\\ids_txt\\test_ids.txt --num-frames 32 --clips-per-vid 5 --img-size 224 --batch-size 1 --num-workers 0 --pretrained D:\\TimeSformer\\pretrained\\TimeSformer_divST_96x4_224_K600.pyth --output-dir embbeding_data\\timesformer\n"
+     ]
+    },
+    {
+     "ename": "CalledProcessError",
+     "evalue": "Command '['conda', 'run', '-n', 'timesformer', '--no-capture-output', 'python', '-u', 'extract_embedding_timesformer.py', '--root', 'D:\\\\golfDataset\\\\dataset\\\\test', '--test-list', 'D:\\\\Jabez\\\\golf\\\\fusion\\\\ids_txt\\\\test_ids.txt', '--num-frames', '32', '--clips-per-vid', '5', '--img-size', '224', '--batch-size', '1', '--num-workers', '0', '--pretrained', 'D:\\\\TimeSformer\\\\pretrained\\\\TimeSformer_divST_96x4_224_K600.pyth', '--output-dir', 'embbeding_data\\\\timesformer']' returned non-zero exit status 1.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mCalledProcessError\u001b[0m                        Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 157\u001b[0m\n\u001b[0;32m    154\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m✅ All done.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    156\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m\u001b[38;5;241m==\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m--> 157\u001b[0m     \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[1], line 130\u001b[0m, in \u001b[0;36mmain\u001b[1;34m()\u001b[0m\n\u001b[0;32m    127\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m▶ PKL created: test=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcnt\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m entries at \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtest_pkl\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    129\u001b[0m \u001b[38;5;66;03m# 4) TimeSformer 임베딩\u001b[39;00m\n\u001b[1;32m--> 130\u001b[0m \u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\n\u001b[0;32m    131\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mpython\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m-u\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mextract_embedding_timesformer.py\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m    132\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m--root\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m        \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mROOT\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    133\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m--test-list\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mtest_list\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    134\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m--num-frames\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m32\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m    135\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m--clips-per-vid\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m5\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m    136\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m--img-size\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m    \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m224\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m    137\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m--batch-size\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m1\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m    138\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m--num-workers\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m0\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m    139\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m--pretrained\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mD:\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mTimeSformer\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mpretrained\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mTimeSformer_divST_96x4_224_K600.pyth\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m    140\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m--output-dir\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43membbeding_data\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[38;5;124;43mtimesformer\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\n\u001b[0;32m    141\u001b[0m \u001b[43m\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mTS_ENV\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    143\u001b[0m \u001b[38;5;66;03m# 5) ST-GCN 임베딩\u001b[39;00m\n\u001b[0;32m    144\u001b[0m run([\n\u001b[0;32m    145\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpython\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m-u\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mD:\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124mJabez\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124mgolf\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124mfusion\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124mextract_embedding_stgcn.py\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m    146\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m--cfg\u001b[39m\u001b[38;5;124m'\u001b[39m,         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mD:\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124mmmaction2\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124mconfigs\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124mskeleton\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124mstgcnpp\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124mmy_stgcnpp.py\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    151\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m--num-workers\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m0\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m    152\u001b[0m ], STGCN_ENV)\n",
+      "Cell \u001b[1;32mIn[1], line 38\u001b[0m, in \u001b[0;36mrun\u001b[1;34m(cmd, env)\u001b[0m\n\u001b[0;32m     36\u001b[0m full \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mconda\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrun\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m-n\u001b[39m\u001b[38;5;124m'\u001b[39m, env, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m--no-capture-output\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m+\u001b[39m cmd\n\u001b[0;32m     37\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m[RUN]\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m*\u001b[39mfull)\n\u001b[1;32m---> 38\u001b[0m \u001b[43msubprocess\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfull\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcheck\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\qqppq\\anaconda3\\envs\\mmaction\\lib\\subprocess.py:516\u001b[0m, in \u001b[0;36mrun\u001b[1;34m(input, capture_output, timeout, check, *popenargs, **kwargs)\u001b[0m\n\u001b[0;32m    514\u001b[0m     retcode \u001b[38;5;241m=\u001b[39m process\u001b[38;5;241m.\u001b[39mpoll()\n\u001b[0;32m    515\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m check \u001b[38;5;129;01mand\u001b[39;00m retcode:\n\u001b[1;32m--> 516\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m CalledProcessError(retcode, process\u001b[38;5;241m.\u001b[39margs,\n\u001b[0;32m    517\u001b[0m                                  output\u001b[38;5;241m=\u001b[39mstdout, stderr\u001b[38;5;241m=\u001b[39mstderr)\n\u001b[0;32m    518\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m CompletedProcess(process\u001b[38;5;241m.\u001b[39margs, retcode, stdout, stderr)\n",
+      "\u001b[1;31mCalledProcessError\u001b[0m: Command '['conda', 'run', '-n', 'timesformer', '--no-capture-output', 'python', '-u', 'extract_embedding_timesformer.py', '--root', 'D:\\\\golfDataset\\\\dataset\\\\test', '--test-list', 'D:\\\\Jabez\\\\golf\\\\fusion\\\\ids_txt\\\\test_ids.txt', '--num-frames', '32', '--clips-per-vid', '5', '--img-size', '224', '--batch-size', '1', '--num-workers', '0', '--pretrained', 'D:\\\\TimeSformer\\\\pretrained\\\\TimeSformer_divST_96x4_224_K600.pyth', '--output-dir', 'embbeding_data\\\\timesformer']' returned non-zero exit status 1."
      ]
     }
    ],
@@ -1383,17 +1395,22 @@
     "\n",
     "# ── NumPy pickle-호환 패치: numpy._core ↔ numpy.core ─────────────\n",
     "import numpy as np, sys\n",
-    "sys.modules.setdefault('numpy._core', np.core)\n",
+    "sys.modules.setdefault('numpy._core', np.core)     # ← 핵심 한 줄\n",
     "# ────────────────────────────────────────────────────────────────\n",
     "\n",
-    "import subprocess, pickle, pandas as pd\n",
+    "import subprocess\n",
+    "import pickle\n",
+    "import pandas as pd\n",
     "from pathlib import Path\n",
+    "import os\n",
     "\n",
     "# ───────────────────────────────────────────────────────────────\n",
     "# 설정\n",
-    "ROOT      = Path(r\"D:\\golfDataset\\dataset\\test\")\n",
-    "TS_ENV    = 'timesformer'\n",
-    "STGCN_ENV = 'mmaction'\n",
+    "ROOT        = Path(r\"D:\\golfDataset\\dataset\\test\")\n",
+    "IDS_DIR     = Path(os.getcwd()).resolve() / 'ids_txt'\n",
+    "TS_ENV      = 'timesformer'\n",
+    "STGCN_ENV   = 'mmaction'\n",
+    "TEST_LIST   = IDS_DIR / 'test_ids.txt'\n",
     "# ───────────────────────────────────────────────────────────────\n",
     "\n",
     "# Body25 → COCO17 인덱스 매핑\n",
@@ -1405,9 +1422,17 @@
     "]\n",
     "\n",
     "def run(cmd, env):\n",
-    "    full = ['conda', 'run', '-n', env, '--no-capture-output'] + cmd\n",
-    "    print('[RUN]', *full)\n",
-    "    subprocess.run(full, check=True)\n",
+    "    full = ['conda', 'run', '-n', env] + cmd\n",
+    "    print(\"[RUN]\", \" \".join(full))\n",
+    "    proc = subprocess.run(full, capture_output=True, text=True)\n",
+    "    if proc.stdout:\n",
+    "        print(proc.stdout, end='')\n",
+    "    if proc.stderr:\n",
+    "        print(proc.stderr, file=sys.stderr, end='')\n",
+    "    if proc.returncode != 0:\n",
+    "        raise subprocess.CalledProcessError(\n",
+    "            proc.returncode, proc.args, output=proc.stdout, stderr=proc.stderr\n",
+    "        )\n",
     "\n",
     "def load_and_process(csv_path: Path,\n",
     "                     img_shape=(1080,1920),\n",
@@ -1419,16 +1444,16 @@
     "    kp25    = np.zeros((1, T, V25, 2), dtype=np.float32)\n",
     "    score25 = np.zeros((1, T, V25),    dtype=np.float32)\n",
     "    for t, row in enumerate(df.values):\n",
-    "        vals       = row.reshape(V25, 3)\n",
-    "        kp25[0,t]  = vals[:, :2]\n",
-    "        score25[0,t] = vals[:, 2]\n",
+    "        vals        = row.reshape(V25, 3)\n",
+    "        kp25[0, t]  = vals[:, :2]\n",
+    "        score25[0, t] = vals[:, 2]\n",
     "    mask = score25 < confidence_threshold\n",
     "    kp25[mask]    = 0\n",
     "    score25[mask] = 0\n",
     "    h, w = img_shape\n",
     "    if normalize_method == '0to1':\n",
-    "        kp25[...,0] /= w\n",
-    "        kp25[...,1] /= h\n",
+    "        kp25[..., 0] /= w\n",
+    "        kp25[..., 1] /= h\n",
     "    kp17    = kp25[:, :, MAPPING_BODY25_TO_COCO17, :]\n",
     "    score17 = score25[:, :, MAPPING_BODY25_TO_COCO17]\n",
     "    return {\n",
@@ -1444,11 +1469,11 @@
     "    for vid in id_list:\n",
     "        csv_file = None\n",
     "        label    = None\n",
-    "        for cat in ['balanced_true','false']:\n",
+    "        for cat in ['balanced_true', 'false']:\n",
     "            p = ROOT / cat / 'crop_keypoint' / f\"{vid}.csv\"\n",
     "            if p.exists():\n",
     "                csv_file = p\n",
-    "                label    = 1 if cat=='balanced_true' else 0\n",
+    "                label    = 1 if cat == 'balanced_true' else 0\n",
     "                break\n",
     "        if csv_file is None:\n",
     "            print(f\"[WARN] CSV not found for id={vid}\")\n",
@@ -1456,9 +1481,11 @@
     "\n",
     "        info = load_and_process(csv_file)\n",
     "        info.update({\n",
-    "            'frame_dir': vid,\n",
-    "            'label':     label,\n",
-    "            'metainfo':  {'frame_dir':vid, 'img_shape':info['img_shape']}\n",
+    "            'frame_dir':      vid,\n",
+    "            'label':          label,\n",
+    "            'img_shape':      info['img_shape'],\n",
+    "            'original_shape': info['original_shape'],\n",
+    "            'metainfo':       {'frame_dir': vid, 'img_shape': info['img_shape']}\n",
     "        })\n",
     "        annotations.append(info)\n",
     "\n",
@@ -1474,23 +1501,23 @@
     "def main():\n",
     "    # 1) ID 수집 (전체를 test)\n",
     "    ids = []\n",
-    "    for cat in ['balanced_true','false']:\n",
+    "    for cat in ['balanced_true', 'false']:\n",
     "        kp_dir   = ROOT / cat / 'crop_keypoint'\n",
-    "        vid_dirs = [ROOT/cat/'crop_video', ROOT/cat/'video']\n",
+    "        vid_dirs = [ROOT / cat / 'crop_video', ROOT / cat / 'video']\n",
     "        if not kp_dir.exists():\n",
     "            continue\n",
     "        for csv_path in kp_dir.glob('*.csv'):\n",
     "            vid_id = csv_path.stem\n",
-    "            if any(vd.glob(f\"{vid_id}*_crop.mp4\") for vd in vid_dirs):\n",
+    "            if any(vd.glob(f\"{vid_id}*.mp4\") for vd in vid_dirs):\n",
     "                ids.append(vid_id)\n",
     "\n",
     "    if not ids:\n",
     "        raise RuntimeError(f\"No matching CSV↔MP4 under {ROOT}\")\n",
     "\n",
     "    # 2) test ID 리스트 저장\n",
-    "    test_list = Path(r'ids_txt\\test_ids.txt').resolve()\n",
-    "    test_list.write_text('\\n'.join(ids))\n",
-    "    print(f\"▶ {len(ids)} test IDs saved to {test_list}\")\n",
+    "    IDS_DIR.mkdir(parents=True, exist_ok=True)\n",
+    "    TEST_LIST.write_text('\\n'.join(ids))\n",
+    "    print(f\"▶ {len(ids)} test IDs saved to {TEST_LIST}\")\n",
     "\n",
     "    # 3) test PKL 생성\n",
     "    base_pkl = ROOT / 'crop_pkl'\n",
@@ -1502,7 +1529,7 @@
     "    run([\n",
     "        'python', '-u', 'extract_embedding_timesformer.py',\n",
     "        '--root',        str(ROOT),\n",
-    "        '--test-list',  str(test_list),\n",
+    "        '--test-list',   str(TEST_LIST),\n",
     "        '--num-frames',  '32',\n",
     "        '--clips-per-vid','5',\n",
     "        '--img-size',    '224',\n",
@@ -1519,13 +1546,13 @@
     "        '--ckpt',        'D:\\\\mmaction2\\\\checkpoints\\\\stgcnpp_8xb16-joint-u100-80e_ntu60-xsub-keypoint-2d_20221228-86e1e77a.pth',\n",
     "        '--device',      'cuda:0',\n",
     "        '--out-dir',     'D:\\\\Jabez\\\\golf\\\\fusion\\\\embbeding_data\\\\stgcnpp',\n",
-    "        '--test-pkl',   str(test_pkl),\n",
+    "        '--test-pkl',    str(test_pkl),\n",
     "        '--num-workers', '0'\n",
     "    ], STGCN_ENV)\n",
     "\n",
     "    print(\"✅ All done.\")\n",
     "\n",
-    "if __name__=='__main__':\n",
+    "if __name__ == '__main__':\n",
     "    main()\n"
    ]
   }
