--- a/golf/preprocessing/video_processing/csv_skeleton_to_video.ipynb
+++ b/golf/preprocessing/video_processing/csv_skeleton_to_video.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a924c9bc",
    "metadata": {},
    "outputs": [
@@ -10,21 +10,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "선택된 CSV 파일: 20201117_General_007_DOC_A_M40_MM_006.csv\n"
+      "선택된 CSV 파일: 20201211_General_121_DOC_A_M40_BS_069_crop.csv\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "20201117_General_007_DOC_A_M40_MM_006_skel.mp4: 100%|██████████| 172/172 [00:00<00:00, 277.25it/s]"
+      "20201211_General_121_DOC_A_M40_BS_069_crop_skel.mp4: 100%|██████████| 168/168 [00:00<00:00, 257.90it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🎞️  영상 저장 완료 → d:\\golfDataset\\스포츠 사람 동작 영상(골프)\\Training\\Public\\male\\tf\\balanced_true\\crop_keypoint\\20201117_General_007_DOC_A_M40_MM_006_skel.mp4\n"
+      "🎞️  영상 저장 완료 → D:\\golfDataset\\dataset\\test\\balanced_true\\crop_keypoint\\20201211_General_121_DOC_A_M40_BS_069_crop_skel.mp4\n"
      ]
     },
     {
@@ -115,7 +115,7 @@
     "    print(f\"🎞️  영상 저장 완료 → {out_mp4}\")\n",
     "\n",
     "# ===== 사용 예 =====\n",
-    "CUR_DIR = Path.cwd()                 # 노트북 작업 디렉터리\n",
+    "CUR_DIR =  Path(r\"D:\\golfDataset\\dataset\\test\")               # 노트북 작업 디렉터리\n",
     "\n",
     "ROOT_DIR = CUR_DIR / \"balanced_true\"    # t,f 폴더 선택\n",
     "\n",
@@ -131,7 +131,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "timesformer",
    "language": "python",
    "name": "python3"
   },
@@ -145,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
