--- a/golf/fusion/label_check.ipynb
+++ b/golf/fusion/label_check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "087b38a1",
    "metadata": {},
    "outputs": [
@@ -12,18 +12,18 @@
      "text": [
       "TS-only Train  acc: 1.0\n",
       "TS-only Train  AUC: 1.0\n",
-      "TS-only Test   acc: 0.4092526690391459\n",
-      "TS-only Test   AUC: 0.4127128953771289\n",
+      "TS-only Test   acc: 0.45195729537366547\n",
+      "TS-only Test   AUC: 0.3523418491484185\n",
       "\n",
-      "ST-only Train acc: 0.6982758620689655\n",
-      "ST-only Train AUC: 0.7400198281559816\n",
-      "ST-only Test  acc: 0.5231316725978647\n",
-      "ST-only Test  AUC: 0.4989355231143553\n",
+      "ST-only Train acc: 0.6954022988505747\n",
+      "ST-only Train AUC: 0.7632187706543291\n",
+      "ST-only Test  acc: 0.5124555160142349\n",
+      "ST-only Test  AUC: 0.508059610705596\n",
       "\n",
       "Fusion Train acc: 1.0\n",
       "Fusion Train AUC: 1.0\n",
-      "Fusion Test  acc: 0.4199288256227758\n",
-      "Fusion Test  AUC: 0.40379156528791565\n"
+      "Fusion Test  acc: 0.42704626334519574\n",
+      "Fusion Test  AUC: 0.35533252230332524\n"
      ]
     }
    ],
@@ -91,6 +91,95 @@
     "print(\"Fusion Train AUC:\", roc_auc_score(y_train, prob_f_train))\n",
     "print(\"Fusion Test  acc:\", accuracy_score(y_test,  pred_f_test))\n",
     "print(\"Fusion Test  AUC:\", roc_auc_score(y_test,  prob_f_test))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "948e1aa9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- TimesFormer 훈련 데이터 (y_ts_train) 레이블 분포 ---\n",
+      "  레이블 '0': 178개\n",
+      "  레이블 '1': 170개\n",
+      "  총 레이블 개수: 348개\n",
+      "\n",
+      "==================================================\n",
+      "\n",
+      "--- TimesFormer 테스트 데이터 (y_ts_test) 레이블 분포 ---\n",
+      "  레이블 '0': 137개\n",
+      "  레이블 '1': 144개\n",
+      "  총 레이블 개수: 281개\n",
+      "\n",
+      "==================================================\n",
+      "\n",
+      "--- ST-GCN 훈련 데이터 (y_st_train) 레이블 분포 ---\n",
+      "  오류: 'embbeding_data/stgcn/train/labels.npy' 파일을 찾을 수 없습니다. 경로를 확인해 주세요.\n",
+      "\n",
+      "==================================================\n",
+      "\n",
+      "--- ST-GCN 테스트 데이터 (y_st_test) 레이블 분포 ---\n",
+      "  오류: 'embbeding_data/stgcn/test/labels.npy' 파일을 찾을 수 없습니다. 경로를 확인해 주세요.\n",
+      "\n",
+      "==================================================\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from collections import Counter\n",
+    "\n",
+    "# --- 레이블 데이터 로드 및 분포 파악 함수 정의 ---\n",
+    "def analyze_label_distribution(file_path, data_name):\n",
+    "    \"\"\"\n",
+    "    지정된 경로의 npy 파일에서 레이블을 로드하고 분포를 분석하여 출력합니다.\n",
+    "    \"\"\"\n",
+    "    print(f\"--- {data_name} 레이블 분포 ---\")\n",
+    "    try:\n",
+    "        labels = np.load(file_path).ravel()\n",
+    "        label_distribution = Counter(labels)\n",
+    "\n",
+    "        # 레이블 값을 기준으로 오름차순 정렬하여 출력\n",
+    "        for label, count in sorted(label_distribution.items()):\n",
+    "            print(f\"  레이블 '{label}': {count}개\")\n",
+    "        print(f\"  총 레이블 개수: {len(labels)}개\")\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"  오류: '{file_path}' 파일을 찾을 수 없습니다. 경로를 확인해 주세요.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"  오류: '{file_path}' 파일 처리 중 예상치 못한 문제가 발생했습니다: {e}\")\n",
+    "    print(\"\\n\" + \"=\"*50 + \"\\n\")\n",
+    "\n",
+    "\n",
+    "# --- 각 레이블 데이터에 대해 분석 실행 ---\n",
+    "\n",
+    "# 1. TimesFormer 훈련 데이터 레이블 (y_ts_train)\n",
+    "analyze_label_distribution(\n",
+    "    'embbeding_data/timesformer/train/labels.npy',\n",
+    "    'TimesFormer 훈련 데이터 (y_ts_train)'\n",
+    ")\n",
+    "\n",
+    "# 2. TimesFormer 테스트 데이터 레이블 (y_ts_test)\n",
+    "analyze_label_distribution(\n",
+    "    'embbeding_data/timesformer/test/labels.npy',\n",
+    "    'TimesFormer 테스트 데이터 (y_ts_test)'\n",
+    ")\n",
+    "\n",
+    "# 3. ST-GCN 훈련 데이터 레이블 (y_st_train)\n",
+    "analyze_label_distribution(\n",
+    "    'embbeding_data/stgcnpp/train/labels.npy',\n",
+    "    'ST-GCN 훈련 데이터 (y_st_train)'\n",
+    ")\n",
+    "\n",
+    "# 4. ST-GCN 테스트 데이터 레이블 (y_st_test)\n",
+    "analyze_label_distribution(\n",
+    "    'embbeding_data/stgcnpp/test/labels.npy',\n",
+    "    'ST-GCN 테스트 데이터 (y_st_test)'\n",
+    ")"
    ]
   }
  ],
