--- a/golf/preprocessing/analysis/csv_analysis.ipynb
+++ b/golf/preprocessing/analysis/csv_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "4b70eba4",
    "metadata": {},
    "outputs": [
@@ -10,19 +10,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                         frames                 mean_x      mean_y      std_x  \\\n",
-      "                           mean        std        mean        mean       mean   \n",
-      "split label                                                                     \n",
-      "test  false          164.182482  31.547168  100.137409  240.436838  49.118692   \n",
-      "train balanced_true  173.920000  49.767408  116.188420  258.933246  55.992941   \n",
-      "      false          197.764706  67.610741  126.429426  272.375767  58.816400   \n",
+      "                         frames               mean_x    mean_y     std_x  \\\n",
+      "                           mean        std      mean      mean      mean   \n",
+      "split label                                                                \n",
+      "test  balanced_true  168.222973  32.543392  0.071616  0.112457  0.474469   \n",
+      "      false          164.182482  31.547168  0.052550  0.118809  0.430992   \n",
+      "train balanced_true  173.920000  49.767408  0.072314  0.118806  0.466220   \n",
+      "      false          197.764706  67.610741  0.079910  0.117337  0.478688   \n",
       "\n",
-      "                          std_y conf_mean  conf_std  \n",
-      "                           mean      mean      mean  \n",
-      "split label                                          \n",
-      "test  false          153.336099  0.535493  0.243918  \n",
-      "train balanced_true  159.822906  0.541574  0.244403  \n",
-      "      false          162.686960  0.564314  0.243544  \n"
+      "                        std_y conf_mean  conf_std  \n",
+      "                         mean      mean      mean  \n",
+      "split label                                        \n",
+      "test  balanced_true  1.332144  0.537702  0.252160  \n",
+      "      false          1.345588  0.535493  0.243918  \n",
+      "train balanced_true  1.334639  0.541574  0.244403  \n",
+      "      false          1.331504  0.564314  0.243544  \n"
      ]
     }
    ],
