--- a/golf/preprocessing/clean_up/clean_CSVMP4.ipynb
+++ b/golf/preprocessing/clean_up/clean_CSVMP4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b7be32e1",
    "metadata": {},
    "outputs": [
@@ -11,23 +11,19 @@
      "output_type": "stream",
      "text": [
       "-- Cleaning: balanced_true --\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\test\\balanced_true\\crop_keypoint\\20201210_General_116_DOC_A_M30_MS_057_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\test\\balanced_true\\crop_keypoint\\20201211_General_122_DOC_A_M50_MM_020_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\test\\balanced_true\\crop_keypoint\\20201211_General_120_DOC_A_M30_MM_055_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\test\\balanced_true\\crop_keypoint\\20201124_General_037_NOS_A_M40_MS_073_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\test\\balanced_true\\crop_keypoint\\20201211_General_117_DOC_A_M30_MM_068_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\test\\balanced_true\\crop_keypoint\\20201211_General_117_DOC_A_M30_MM_014_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\test\\balanced_true\\crop_keypoint\\20201210_General_116_DOC_A_M30_MS_042_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\test\\balanced_true\\crop_keypoint\\20201211_General_117_DOC_A_M30_MM_002_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\test\\balanced_true\\crop_keypoint\\20201211_General_120_DOC_A_M30_MM_071_crop.csv\n",
       "Removed unmatched CSV: D:\\golfDataset\\dataset\\test\\balanced_true\\crop_keypoint\\20201211_General_118_DOC_A_M40_MM_074_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\test\\balanced_true\\crop_keypoint\\20201211_General_122_DOC_A_M50_MM_019_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\test\\balanced_true\\crop_keypoint\\20201211_General_119_DOC_A_M20_MM_027_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\test\\balanced_true\\crop_keypoint\\20201211_General_117_DOC_A_M30_MM_013_crop.csv\n",
       "Completed: balanced_true\n",
       "\n",
       "-- Cleaning: false --\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\test\\false\\crop_keypoint\\20201210_General_114_DOC_A_M30_MM_035_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\test\\false\\crop_keypoint\\20201210_General_112_DOC_A_M20_MM_024_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\test\\false\\crop_keypoint\\20201210_General_114_DOC_A_M30_MM_019_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\test\\false\\crop_keypoint\\20201210_General_114_NOC_A_M30_MM_075_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\test\\false\\crop_keypoint\\20201210_General_112_DOC_A_M20_MM_019_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\test\\false\\crop_keypoint\\20201210_General_114_DOC_A_M30_MM_027_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\test\\false\\crop_keypoint\\20201210_General_114_DOC_A_M30_MM_014_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\test\\false\\crop_keypoint\\20201210_General_112_DOC_A_M20_MM_032_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\test\\false\\crop_keypoint\\20201210_General_112_DOC_A_M20_MM_040_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\test\\false\\crop_keypoint\\20201210_General_114_DOC_A_M30_MM_043_crop.csv\n",
       "Completed: false\n",
       "\n",
       "All cleaning tasks finished.\n"
@@ -89,7 +85,7 @@
     "\n",
     "def main():\n",
     "    # test 폴더로 청소, train 원하면 train으로 변경\n",
-    "    base_dir = Path(r\"D:\\golfDataset\\dataset\\test\")\n",
+    "    base_dir = Path(r\"D:\\golfDataset\\dataset\\train\")\n",
     "    # 상위 폴더 리스트 (balanced_true, false)\n",
     "    parents = [\"balanced_true\", \"false\"]\n",
     "\n",
