--- a/golf/preprocessing/analysis/label_check.ipynb
+++ b/golf/preprocessing/analysis/label_check.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "948e1aa9",
    "metadata": {},
    "outputs": [
@@ -112,8 +112,8 @@
       "\n",
       "--- TimesFormer 테스트 데이터 (y_ts_test) 레이블 분포 ---\n",
       "  레이블 '0': 137개\n",
-      "  레이블 '1': 144개\n",
-      "  총 레이블 개수: 281개\n",
+      "  레이블 '1': 138개\n",
+      "  총 레이블 개수: 275개\n",
       "\n",
       "==================================================\n",
       "\n",
@@ -126,8 +126,8 @@
       "\n",
       "--- ST-GCN 테스트 데이터 (y_st_test) 레이블 분포 ---\n",
       "  레이블 '0': 137개\n",
-      "  레이블 '1': 144개\n",
-      "  총 레이블 개수: 281개\n",
+      "  레이블 '1': 138개\n",
+      "  총 레이블 개수: 275개\n",
       "\n",
       "==================================================\n",
       "\n"
@@ -163,32 +163,32 @@
     "\n",
     "# 1. TimesFormer 훈련 데이터 레이블 (y_ts_train)\n",
     "analyze_label_distribution(\n",
-    "    'embbeding_data/timesformer/train/labels.npy',\n",
+    "    r'D:\\Jabez\\golf\\fusion\\embbeding_data\\timesformer\\train\\labels.npy',\n",
     "    'TimesFormer 훈련 데이터 (y_ts_train)'\n",
     ")\n",
     "\n",
     "# 2. TimesFormer 테스트 데이터 레이블 (y_ts_test)\n",
     "analyze_label_distribution(\n",
-    "    'embbeding_data/timesformer/test/labels.npy',\n",
+    "    r'D:\\Jabez\\golf\\fusion\\embbeding_data\\timesformer\\test\\labels.npy',\n",
     "    'TimesFormer 테스트 데이터 (y_ts_test)'\n",
     ")\n",
     "\n",
     "# 3. ST-GCN 훈련 데이터 레이블 (y_st_train)\n",
     "analyze_label_distribution(\n",
-    "    'embbeding_data/stgcnpp/train/labels.npy',\n",
+    "    r'D:\\Jabez\\golf\\fusion\\embbeding_data\\stgcnpp\\train\\labels.npy',\n",
     "    'ST-GCN 훈련 데이터 (y_st_train)'\n",
     ")\n",
     "\n",
     "# 4. ST-GCN 테스트 데이터 레이블 (y_st_test)\n",
     "analyze_label_distribution(\n",
-    "    'embbeding_data/stgcnpp/test/labels.npy',\n",
+    "    r'D:\\Jabez\\golf\\fusion\\embbeding_data\\stgcnpp\\test\\labels.npy',\n",
     "    'ST-GCN 테스트 데이터 (y_st_test)'\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "a49fb07e",
    "metadata": {},
    "outputs": [
@@ -197,20 +197,20 @@
      "output_type": "stream",
      "text": [
       "📦 Test 샘플 10개 미리보기:\n",
-      " - ID: 20201124_General_037_DOS_A_M40_MS_002_crop, Label: 1\n",
+      " - ID: 20201124_General_037_DOS_A_M40_MS_001_crop, Label: 1\n",
+      " - ID: 20201124_General_037_DOS_A_M40_MS_003_crop, Label: 1\n",
       " - ID: 20201124_General_037_DOS_A_M40_MS_006_crop, Label: 1\n",
-      " - ID: 20201124_General_037_DOS_A_M40_MS_013_crop, Label: 1\n",
-      " - ID: 20201124_General_037_DOS_A_M40_MS_034_crop, Label: 1\n",
-      " - ID: 20201124_General_037_DOS_A_M40_MS_040_crop, Label: 1\n",
-      " - ID: 20201124_General_037_DOS_A_M40_MS_043_crop, Label: 1\n",
-      " - ID: 20201124_General_037_DOS_A_M40_MS_046_crop, Label: 1\n",
-      " - ID: 20201124_General_037_DOS_A_M40_MS_055_crop, Label: 1\n",
-      " - ID: 20201124_General_037_DOS_A_M40_MS_059_crop, Label: 1\n",
-      " - ID: 20201124_General_037_NOS_A_M40_MS_064_crop, Label: 1\n",
+      " - ID: 20201124_General_037_DOS_A_M40_MS_010_crop, Label: 1\n",
+      " - ID: 20201124_General_037_DOS_A_M40_MS_011_crop, Label: 1\n",
+      " - ID: 20201124_General_037_DOS_A_M40_MS_016_crop, Label: 1\n",
+      " - ID: 20201124_General_037_DOS_A_M40_MS_018_crop, Label: 1\n",
+      " - ID: 20201124_General_037_DOS_A_M40_MS_022_crop, Label: 1\n",
+      " - ID: 20201124_General_037_DOS_A_M40_MS_030_crop, Label: 1\n",
+      " - ID: 20201124_General_037_DOS_A_M40_MS_031_crop, Label: 1\n",
       "\n",
       "📊 전체 레이블 분포:\n",
       "  0 (bad/worst): 137\n",
-      "  1 (normal/good/great): 144\n"
+      "  1 (normal/good/great): 138\n"
      ]
     }
    ],
@@ -240,14 +240,6 @@
     "print(f\"  0 (bad/worst): {counter[0]}\")\n",
     "print(f\"  1 (normal/good/great): {counter[1]}\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "595c4f37",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
