--- a/golf/preprocessing/json_extract/action_classfication.ipynb
+++ b/golf/preprocessing/json_extract/action_classfication.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "799105c6",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,8 @@
     "import shutil\n",
     "\n",
     "# 경로 설정\n",
-    "base_path = r\"D:\\golfDataset\\스포츠 사람 동작 영상(골프)\\Training\\Public\\male\"\n",
+    "# Training/Validation, Public/Assosiation/Amature, male/female 로 경로 나뉨\n",
+    "base_path = r\"D:\\golfDataset\\스포츠 사람 동작 영상(골프)\\Training\\Public\\female\"\n",
     "dataset_base_path = r\"D:\\golfDataset\\dataset\\train\"   # 저장은 다른 접근이 쉬운 dataset 폴더에\n",
     "# test, train은 직접 지정\n",
     "\n",
