--- a/golf/preprocessing/analysis/label_check.ipynb
+++ b/golf/preprocessing/analysis/label_check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "087b38a1",
    "metadata": {},
    "outputs": [
@@ -12,18 +12,18 @@
      "text": [
       "TS-only Train  acc: 1.0\n",
       "TS-only Train  AUC: 1.0\n",
-      "TS-only Test   acc: 0.40569395017793597\n",
-      "TS-only Test   AUC: 0.28654703974047036\n",
+      "TS-only Test   acc: 0.41454545454545455\n",
+      "TS-only Test   AUC: 0.37802813921506395\n",
       "\n",
-      "ST-only Train acc: 0.6538461538461539\n",
-      "ST-only Train AUC: 0.689532208588957\n",
-      "ST-only Test  acc: 0.5124555160142349\n",
-      "ST-only Test  AUC: 0.4280210867802109\n",
+      "ST-only Train acc: 0.6538037486218302\n",
+      "ST-only Train AUC: 0.7003786198273776\n",
+      "ST-only Test  acc: 0.5054545454545455\n",
+      "ST-only Test  AUC: 0.5183010684438802\n",
       "\n",
       "Fusion Train acc: 1.0\n",
       "Fusion Train AUC: 1.0\n",
-      "Fusion Test  acc: 0.3879003558718861\n",
-      "Fusion Test  AUC: 0.27808191403081917\n"
+      "Fusion Test  acc: 0.4254545454545455\n",
+      "Fusion Test  AUC: 0.38612080820903416\n"
      ]
     }
    ],
@@ -31,22 +31,25 @@
     "import numpy as np\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import accuracy_score, roc_auc_score\n",
+    "from pathlib import Path\n",
+    "\n",
+    "BASE = Path(r\"D:\\Jabez\\golf\\fusion\\embedding_data\")\n",
     "\n",
     "# ——————————————————————————————————\n",
     "# 1) 데이터 로드\n",
     "# ——————————————————————————————————\n",
     "# TS (TimeSformer) 임베딩\n",
-    "X_ts_train = np.load('embbeding_data/timesformer/train/embeddings.npy')\n",
-    "y_train     = np.load('embbeding_data/timesformer/train/labels.npy').ravel()\n",
-    "X_ts_test  = np.load('embbeding_data/timesformer/test/embeddings.npy')\n",
-    "y_test     = np.load('embbeding_data/timesformer/test/labels.npy').ravel()\n",
+    "X_ts_train = np.load(BASE / 'timesformer/train/embeddings.npy')\n",
+    "y_train    = np.load(BASE / 'timesformer/train/labels.npy').ravel()\n",
+    "X_ts_test  = np.load(BASE / 'timesformer/test/embeddings.npy')\n",
+    "y_test     = np.load(BASE / 'timesformer/test/labels.npy').ravel()\n",
     "\n",
     "# ST (ST-GCN) 임베딩 (3D → 2D flatten)\n",
-    "X_st_train = np.load('embbeding_data/stgcnpp/train/embeddings.npy')\n",
-    "X_st_test  = np.load('embbeding_data/stgcnpp/test/embeddings.npy')\n",
+    "X_st_train = np.load(BASE / 'stgcnpp/train/embeddings.npy')\n",
+    "X_st_test  = np.load(BASE / 'stgcnpp/test/embeddings.npy')\n",
     "# 세그먼트 축(1)을 평균 처리\n",
     "X_st_train = X_st_train.mean(axis=1)\n",
-    "X_st_test  = X_st_test.mean(axis=1)\n",
+    "X_st_test = X_st_test.mean(axis=1)\n",
     "\n",
     "# ——————————————————————————————————\n",
     "# 2) TS-only 성능\n",
