--- a/golf/preprocessing/video_processing/extract_timesformer_per_video.ipynb
+++ b/golf/preprocessing/video_processing/extract_timesformer_per_video.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2ca35136",
    "metadata": {},
    "outputs": [
@@ -10,14 +10,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "총 275개 mp4 처리\n"
+      "총 2071개 mp4 처리\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Extracting: 100%|█████████████████████████████| 275/275 [08:08<00:00,  1.78s/it]\n"
+      "Extracting:   6%|█▌                        | 127/2071 [16:27<4:26:36,  8.23s/it]"
      ]
     }
    ],
@@ -36,10 +36,11 @@
     "# === 파라미터 직접 지정 ===\n",
     "ROOT = Path(r'D:/golfDataset/dataset')\n",
     "FUSION_DIR = Path(r'D:/Jabez/golf/fusion')\n",
-    "PER_VIDEO_DIR = FUSION_DIR / 'embbeding_data' / 'timesformer' / 'per_video'\n",
+    "PER_VIDEO_DIR = FUSION_DIR / 'embedding_data' / 'timesformer' / 'per_video'\n",
     "PER_VIDEO_DIR.mkdir(parents=True, exist_ok=True)\n",
     "PRETRAINED = Path(r'D:/timesformer/pretrained/TimeSformer_divST_96x4_224_K600.pyth')\n",
-    "NUM_FRAMES = 32\n",
+    "NUM_FRAMES = 128    # 비디오에서 추출할 프레임 수\n",
+    "# 일반적으로 스윙은 2초 이상(jpg 결합이 30fps 기준, 120프레임은 필요)\n",
     "CLIPS_PER_VID = 5\n",
     "IMG_SIZE = 224\n",
     "DEVICE = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
