--- a/golf/fusion/data_loader.ipynb
+++ b/golf/fusion/data_loader.ipynb
@@ -9,6 +9,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b76d2828",
+   "metadata": {},
+   "source": [
+    "model은  \n",
+    "'D:\\\\mmaction2\\\\checkpoints\\\\stgcnpp_8xb16-joint-u100-80e_ntu60-xsub-keypoint-2d_20221228-86e1e77a.pth'  \n",
+    "\"D:\\mmaction2\\work_dirs\\my_stgcnpp\\best_acc_top1_epoch_5.pth\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "0cb6d03d",
@@ -1222,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2f02e304",
    "metadata": {},
    "outputs": [
@@ -1231,27 +1241,27 @@
      "output_type": "stream",
      "text": [
       "[INFO] #Train=907 #Valid=101 #Test=275\n",
-      "[RUN] conda run -n timesformer python -u D:\\Jabez\\golf\\fusion\\assemble_timesformer_embeddings.py --per-video-dir D:\\Jabez\\golf\\fusion\\embbeding_data\\timesformer\\per_video --id-list D:\\Jabez\\golf\\fusion\\ids_txt\\train_ids.txt --out-dir D:\\Jabez\\golf\\fusion\\embbeding_data\\timesformer\\train\n",
+      "[RUN] conda run -n timesformer python -u D:\\Jabez\\golf\\fusion\\assemble_timesformer_embeddings.py --per-video-dir D:\\Jabez\\golf\\fusion\\embedding_data\\timesformer\\per_video --id-list D:\\Jabez\\golf\\fusion\\ids_txt\\train_ids.txt --out-dir D:\\Jabez\\golf\\fusion\\embedding_data\\timesformer\\train\n",
       "Saved: (907, 768), (907,), (907,)\n",
       "\n",
       "\n",
-      "[RUN] conda run -n timesformer python -u D:\\Jabez\\golf\\fusion\\assemble_timesformer_embeddings.py --per-video-dir D:\\Jabez\\golf\\fusion\\embbeding_data\\timesformer\\per_video --id-list D:\\Jabez\\golf\\fusion\\ids_txt\\valid_ids.txt --out-dir D:\\Jabez\\golf\\fusion\\embbeding_data\\timesformer\\valid\n",
+      "[RUN] conda run -n timesformer python -u D:\\Jabez\\golf\\fusion\\assemble_timesformer_embeddings.py --per-video-dir D:\\Jabez\\golf\\fusion\\embedding_data\\timesformer\\per_video --id-list D:\\Jabez\\golf\\fusion\\ids_txt\\valid_ids.txt --out-dir D:\\Jabez\\golf\\fusion\\embedding_data\\timesformer\\valid\n",
       "Saved: (101, 768), (101,), (101,)\n",
       "\n",
       "\n",
-      "[RUN] conda run -n timesformer python -u D:\\Jabez\\golf\\fusion\\assemble_timesformer_embeddings.py --per-video-dir D:\\Jabez\\golf\\fusion\\embbeding_data\\timesformer\\per_video --id-list D:\\Jabez\\golf\\fusion\\ids_txt\\test_ids.txt --out-dir D:\\Jabez\\golf\\fusion\\embbeding_data\\timesformer\\test\n",
+      "[RUN] conda run -n timesformer python -u D:\\Jabez\\golf\\fusion\\assemble_timesformer_embeddings.py --per-video-dir D:\\Jabez\\golf\\fusion\\embedding_data\\timesformer\\per_video --id-list D:\\Jabez\\golf\\fusion\\ids_txt\\test_ids.txt --out-dir D:\\Jabez\\golf\\fusion\\embedding_data\\timesformer\\test\n",
       "Saved: (275, 768), (275,), (275,)\n",
       "\n",
       "\n",
-      "[RUN] conda run -n mmaction python -u D:\\Jabez\\golf\\fusion\\extract_embedding_stgcn.py --cfg D:\\mmaction2\\configs\\skeleton\\stgcnpp\\my_stgcnpp.py --ckpt D:\\mmaction2\\checkpoints\\stgcnpp_8xb16-joint-u100-80e_ntu60-xsub-keypoint-2d_20221228-86e1e77a.pth --device cuda:0 --out-dir D:\\Jabez\\golf\\fusion\\embbeding_data\\stgcnpp --train-pkl D:\\golfDataset\\dataset\\train\\crop_pkl\\skeleton_dataset_train.pkl --valid-pkl D:\\golfDataset\\dataset\\train\\crop_pkl\\skeleton_dataset_valid.pkl --test-pkl D:\\golfDataset\\dataset\\train\\crop_pkl\\skeleton_dataset_test.pkl --num-workers 0\n",
-      "07/28 00:41:01 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - \n",
+      "[RUN] conda run -n mmaction python -u D:\\Jabez\\golf\\fusion\\extract_embedding_stgcn.py --cfg D:\\mmaction2\\configs\\skeleton\\stgcnpp\\my_stgcnpp.py --ckpt D:\\mmaction2\\checkpoints\\stgcnpp_8xb16-joint-u100-80e_ntu60-xsub-keypoint-2d_20221228-86e1e77a.pth --device cuda:0 --out-dir D:\\Jabez\\golf\\fusion\\embedding_data\\stgcnpp --train-pkl D:\\golfDataset\\dataset\\train\\crop_pkl\\skeleton_dataset_train.pkl --valid-pkl D:\\golfDataset\\dataset\\train\\crop_pkl\\skeleton_dataset_valid.pkl --test-pkl D:\\golfDataset\\dataset\\train\\crop_pkl\\skeleton_dataset_test.pkl --num-workers 0\n",
+      "07/28 01:44:37 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - \n",
       "------------------------------------------------------------\n",
       "System environment:\n",
       "    sys.platform: win32\n",
       "    Python: 3.8.20 (default, Oct  3 2024, 15:19:54) [MSC v.1929 64 bit (AMD64)]\n",
       "    CUDA available: True\n",
       "    MUSA available: False\n",
-      "    numpy_random_seed: 2095511457\n",
+      "    numpy_random_seed: 886442183\n",
       "    GPU 0: NVIDIA GeForce RTX 4060 Laptop GPU\n",
       "    CUDA_HOME: C:\\Program Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v12.6\n",
       "    NVCC: Cuda compilation tools, release 12.6, V12.6.20\n",
@@ -1280,13 +1290,13 @@
       "    cudnn_benchmark: False\n",
       "    dist_cfg: {'backend': 'nccl'}\n",
       "    mp_cfg: {'mp_start_method': 'fork', 'opencv_num_threads': 0}\n",
-      "    seed: 2095511457\n",
+      "    seed: 886442183\n",
       "    Distributed launcher: none\n",
       "    Distributed training: False\n",
       "    GPU number: 1\n",
       "------------------------------------------------------------\n",
       "\n",
-      "07/28 00:41:01 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Config:\n",
+      "07/28 01:44:37 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Config:\n",
       "ann_file = 'D:\\\\golfDataset\\\\dataset\\\\train\\\\crop_pkl\\\\skeleton_dataset_90_10.pkl'\n",
       "auto_scale_lr = dict(base_batch_size=128, enable=False)\n",
       "custom_hooks = [\n",
@@ -1471,8 +1481,8 @@
       "    ])\n",
       "work_dir = './work_dirs\\\\my_stgcnpp'\n",
       "\n",
-      "07/28 00:41:02 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Distributed training is not used, all SyncBatchNorm (SyncBN) layers in the model will be automatically reverted to BatchNormXd layers if they are used.\n",
-      "07/28 00:41:02 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Hooks will be executed in the following order:\n",
+      "07/28 01:44:38 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Distributed training is not used, all SyncBatchNorm (SyncBN) layers in the model will be automatically reverted to BatchNormXd layers if they are used.\n",
+      "07/28 01:44:38 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Hooks will be executed in the following order:\n",
       "before_run:\n",
       "(VERY_HIGH   ) RuntimeInfoHook                    \n",
       "(BELOW_NORMAL) LoggerHook                         \n",
@@ -1565,10 +1575,10 @@
       "\n",
       "size mismatch for cls_head.fc.weight: copying a param with shape torch.Size([60, 256]) from checkpoint, the shape in current model is torch.Size([2, 256]).\n",
       "size mismatch for cls_head.fc.bias: copying a param with shape torch.Size([60]) from checkpoint, the shape in current model is torch.Size([2]).\n",
-      "07/28 00:41:03 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - 275 videos remain after valid thresholding\n",
-      "07/28 00:41:03 - mmengine - \u001b[5m\u001b[4m\u001b[33mWARNING\u001b[0m - The prefix is not set in metric class DumpResults.\n",
+      "07/28 01:44:39 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - 275 videos remain after valid thresholding\n",
+      "07/28 01:44:39 - mmengine - \u001b[5m\u001b[4m\u001b[33mWARNING\u001b[0m - The prefix is not set in metric class DumpResults.\n",
       "✅ test done: embeddings=(275, 10, 256), labels=(275, 1), ids=(275,)\n",
-      "07/28 00:41:10 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - \n",
+      "07/28 01:44:45 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - \n",
       "------------------------------------------------------------\n",
       "System environment:\n",
       "    sys.platform: win32\n",
@@ -1610,7 +1620,7 @@
       "    GPU number: 1\n",
       "------------------------------------------------------------\n",
       "\n",
-      "07/28 00:41:10 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Config:\n",
+      "07/28 01:44:45 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Config:\n",
       "ann_file = 'D:\\\\golfDataset\\\\dataset\\\\train\\\\crop_pkl\\\\skeleton_dataset_90_10.pkl'\n",
       "auto_scale_lr = dict(base_batch_size=128, enable=False)\n",
       "custom_hooks = [\n",
@@ -1795,8 +1805,8 @@
       "    ])\n",
       "work_dir = './work_dirs\\\\my_stgcnpp'\n",
       "\n",
-      "07/28 00:41:11 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Distributed training is not used, all SyncBatchNorm (SyncBN) layers in the model will be automatically reverted to BatchNormXd layers if they are used.\n",
-      "07/28 00:41:11 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Hooks will be executed in the following order:\n",
+      "07/28 01:44:45 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Distributed training is not used, all SyncBatchNorm (SyncBN) layers in the model will be automatically reverted to BatchNormXd layers if they are used.\n",
+      "07/28 01:44:45 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Hooks will be executed in the following order:\n",
       "before_run:\n",
       "(VERY_HIGH   ) RuntimeInfoHook                    \n",
       "(BELOW_NORMAL) LoggerHook                         \n",
@@ -1889,17 +1899,17 @@
       "\n",
       "size mismatch for cls_head.fc.weight: copying a param with shape torch.Size([60, 256]) from checkpoint, the shape in current model is torch.Size([2, 256]).\n",
       "size mismatch for cls_head.fc.bias: copying a param with shape torch.Size([60]) from checkpoint, the shape in current model is torch.Size([2]).\n",
-      "07/28 00:41:11 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - 907 videos remain after valid thresholding\n",
-      "07/28 00:41:11 - mmengine - \u001b[5m\u001b[4m\u001b[33mWARNING\u001b[0m - The prefix is not set in metric class DumpResults.\n",
+      "07/28 01:44:45 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - 907 videos remain after valid thresholding\n",
+      "07/28 01:44:46 - mmengine - \u001b[5m\u001b[4m\u001b[33mWARNING\u001b[0m - The prefix is not set in metric class DumpResults.\n",
       "✅ train done: embeddings=(907, 10, 256), labels=(907, 1), ids=(907,)\n",
-      "07/28 00:41:32 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - \n",
+      "07/28 01:45:05 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - \n",
       "------------------------------------------------------------\n",
       "System environment:\n",
       "    sys.platform: win32\n",
       "    Python: 3.8.20 (default, Oct  3 2024, 15:19:54) [MSC v.1929 64 bit (AMD64)]\n",
       "    CUDA available: True\n",
       "    MUSA available: False\n",
-      "    numpy_random_seed: 1497251029\n",
+      "    numpy_random_seed: 730307228\n",
       "    GPU 0: NVIDIA GeForce RTX 4060 Laptop GPU\n",
       "    CUDA_HOME: C:\\Program Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v12.6\n",
       "    NVCC: Cuda compilation tools, release 12.6, V12.6.20\n",
@@ -1928,13 +1938,13 @@
       "    cudnn_benchmark: False\n",
       "    dist_cfg: {'backend': 'nccl'}\n",
       "    mp_cfg: {'mp_start_method': 'fork', 'opencv_num_threads': 0}\n",
-      "    seed: 1497251029\n",
+      "    seed: 730307228\n",
       "    Distributed launcher: none\n",
       "    Distributed training: False\n",
       "    GPU number: 1\n",
       "------------------------------------------------------------\n",
       "\n",
-      "07/28 00:41:32 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Config:\n",
+      "07/28 01:45:05 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Config:\n",
       "ann_file = 'D:\\\\golfDataset\\\\dataset\\\\train\\\\crop_pkl\\\\skeleton_dataset_90_10.pkl'\n",
       "auto_scale_lr = dict(base_batch_size=128, enable=False)\n",
       "custom_hooks = [\n",
@@ -2119,8 +2129,8 @@
       "    ])\n",
       "work_dir = './work_dirs\\\\my_stgcnpp'\n",
       "\n",
-      "07/28 00:41:32 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Distributed training is not used, all SyncBatchNorm (SyncBN) layers in the model will be automatically reverted to BatchNormXd layers if they are used.\n",
-      "07/28 00:41:32 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Hooks will be executed in the following order:\n",
+      "07/28 01:45:05 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Distributed training is not used, all SyncBatchNorm (SyncBN) layers in the model will be automatically reverted to BatchNormXd layers if they are used.\n",
+      "07/28 01:45:05 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Hooks will be executed in the following order:\n",
       "before_run:\n",
       "(VERY_HIGH   ) RuntimeInfoHook                    \n",
       "(BELOW_NORMAL) LoggerHook                         \n",
@@ -2213,8 +2223,8 @@
       "\n",
       "size mismatch for cls_head.fc.weight: copying a param with shape torch.Size([60, 256]) from checkpoint, the shape in current model is torch.Size([2, 256]).\n",
       "size mismatch for cls_head.fc.bias: copying a param with shape torch.Size([60]) from checkpoint, the shape in current model is torch.Size([2]).\n",
-      "07/28 00:41:32 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - 101 videos remain after valid thresholding\n",
-      "07/28 00:41:32 - mmengine - \u001b[5m\u001b[4m\u001b[33mWARNING\u001b[0m - The prefix is not set in metric class DumpResults.\n",
+      "07/28 01:45:05 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - 101 videos remain after valid thresholding\n",
+      "07/28 01:45:05 - mmengine - \u001b[5m\u001b[4m\u001b[33mWARNING\u001b[0m - The prefix is not set in metric class DumpResults.\n",
       "✅ valid done: embeddings=(101, 10, 256), labels=(101, 1), ids=(101,)\n",
       "\n",
       "\n",
