--- a/golf/preprocessing/clean_up/clean_CSVMP4.ipynb
+++ b/golf/preprocessing/clean_up/clean_CSVMP4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "b7be32e1",
    "metadata": {},
    "outputs": [
@@ -11,6 +11,39 @@
      "output_type": "stream",
      "text": [
       "-- Cleaning: balanced_true --\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201127_General_055_DOC_A_M40_MM_081_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201126_General_047_DOS_A_M30_MM_069_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201124_General_033_DOS_A_M40_MM_061_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201127_General_052_DOS_A_F30_MM_035_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201117_General_009_DOC_A_M40_SM_015_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201118_General_020_DOR_A_F50_MM_046_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201118_General_020_DOC_A_F50_MM_068_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201123_General_032_DOS_A_F30_MM_088_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201202_General_066_DOC_A_M40_MM_028_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201123_General_032_DOS_A_F30_MM_063_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201127_General_056_DOC_A_F20_MM_056_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201127_General_052_DOS_A_F30_MM_079_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201120_General_024_NOC_A_M40_MM_063_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201127_General_052_DOS_A_F30_MM_084_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201120_General_025_DOC_A_M40_MM_037_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201127_General_052_DOS_A_F30_MM_054_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201127_General_056_DOC_A_F20_MM_011_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201201_General_063_DOS_A_M50_MS_050_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201127_General_056_DOC_A_F20_MM_025_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201127_General_052_DOS_A_F30_MM_085_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201120_General_022_DOC_A_M40_MS_067_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201124_General_033_DOS_A_M40_MM_070_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201118_General_020_DOC_A_F50_MM_069_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201120_General_023_DOC_A_M40_MM_048_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201118_General_018_DOC_A_M40_MM_017_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201201_General_064_DOS_A_M50_MM_056_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201118_General_018_DOC_A_M40_MM_013_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201123_General_032_DOS_A_F30_MM_084_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201201_General_064_DOS_A_M50_MM_007_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201120_General_021_DOC_A_M40_MM_060_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201124_General_033_DOS_A_M40_MM_032_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201124_General_033_DOS_A_M40_MM_071_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201120_General_025_DOC_A_M40_MM_041_crop.csv\n",
       "Completed: balanced_true\n",
       "\n",
       "-- Cleaning: false --\n",
