--- a/golf/preprocessing/analysis/label_check.ipynb
+++ b/golf/preprocessing/analysis/label_check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "087b38a1",
    "metadata": {},
    "outputs": [
@@ -12,18 +12,18 @@
      "text": [
       "TS-only Train  acc: 1.0\n",
       "TS-only Train  AUC: 1.0\n",
-      "TS-only Test   acc: 0.41454545454545455\n",
-      "TS-only Test   AUC: 0.37802813921506395\n",
+      "TS-only Test   acc: 0.40808823529411764\n",
+      "TS-only Test   AUC: 0.3857799405244661\n",
       "\n",
-      "ST-only Train acc: 0.6538037486218302\n",
-      "ST-only Train AUC: 0.7003786198273776\n",
-      "ST-only Test  acc: 0.5054545454545455\n",
-      "ST-only Test  AUC: 0.5183010684438802\n",
+      "ST-only Train acc: 0.7714638665843113\n",
+      "ST-only Train AUC: 0.728075092860444\n",
+      "ST-only Test  acc: 0.4963235294117647\n",
+      "ST-only Test  AUC: 0.5996215193295487\n",
       "\n",
       "Fusion Train acc: 1.0\n",
       "Fusion Train AUC: 1.0\n",
-      "Fusion Test  acc: 0.4254545454545455\n",
-      "Fusion Test  AUC: 0.38612080820903416\n"
+      "Fusion Test  acc: 0.4117647058823529\n",
+      "Fusion Test  AUC: 0.3870235198702352\n"
      ]
     }
    ],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "948e1aa9",
    "metadata": {},
    "outputs": [
@@ -107,30 +107,30 @@
      "output_type": "stream",
      "text": [
       "--- TimesFormer 훈련 데이터 (y_ts_train) 레이블 분포 ---\n",
-      "  레이블 '0': 326개\n",
-      "  레이블 '1': 480개\n",
-      "  총 레이블 개수: 806개\n",
+      "  레이블 '0': 376개\n",
+      "  레이블 '1': 1243개\n",
+      "  총 레이블 개수: 1619개\n",
       "\n",
       "==================================================\n",
       "\n",
       "--- TimesFormer 테스트 데이터 (y_ts_test) 레이블 분포 ---\n",
       "  레이블 '0': 137개\n",
-      "  레이블 '1': 138개\n",
-      "  총 레이블 개수: 275개\n",
+      "  레이블 '1': 135개\n",
+      "  총 레이블 개수: 272개\n",
       "\n",
       "==================================================\n",
       "\n",
       "--- ST-GCN 훈련 데이터 (y_st_train) 레이블 분포 ---\n",
-      "  레이블 '0': 326개\n",
-      "  레이블 '1': 480개\n",
-      "  총 레이블 개수: 806개\n",
+      "  레이블 '0': 376개\n",
+      "  레이블 '1': 1243개\n",
+      "  총 레이블 개수: 1619개\n",
       "\n",
       "==================================================\n",
       "\n",
       "--- ST-GCN 테스트 데이터 (y_st_test) 레이블 분포 ---\n",
       "  레이블 '0': 137개\n",
-      "  레이블 '1': 138개\n",
-      "  총 레이블 개수: 275개\n",
+      "  레이블 '1': 135개\n",
+      "  총 레이블 개수: 272개\n",
       "\n",
       "==================================================\n",
       "\n"
@@ -166,25 +166,25 @@
     "\n",
     "# 1. TimesFormer 훈련 데이터 레이블 (y_ts_train)\n",
     "analyze_label_distribution(\n",
-    "    r'D:\\Jabez\\golf\\fusion\\embbeding_data\\timesformer\\train\\labels.npy',\n",
+    "    r'D:\\Jabez\\golf\\fusion\\embedding_data\\timesformer\\train\\labels.npy',\n",
     "    'TimesFormer 훈련 데이터 (y_ts_train)'\n",
     ")\n",
     "\n",
     "# 2. TimesFormer 테스트 데이터 레이블 (y_ts_test)\n",
     "analyze_label_distribution(\n",
-    "    r'D:\\Jabez\\golf\\fusion\\embbeding_data\\timesformer\\test\\labels.npy',\n",
+    "    r'D:\\Jabez\\golf\\fusion\\embedding_data\\timesformer\\test\\labels.npy',\n",
     "    'TimesFormer 테스트 데이터 (y_ts_test)'\n",
     ")\n",
     "\n",
     "# 3. ST-GCN 훈련 데이터 레이블 (y_st_train)\n",
     "analyze_label_distribution(\n",
-    "    r'D:\\Jabez\\golf\\fusion\\embbeding_data\\stgcnpp\\train\\labels.npy',\n",
+    "    r'D:\\Jabez\\golf\\fusion\\embedding_data\\stgcnpp\\train\\labels.npy',\n",
     "    'ST-GCN 훈련 데이터 (y_st_train)'\n",
     ")\n",
     "\n",
     "# 4. ST-GCN 테스트 데이터 레이블 (y_st_test)\n",
     "analyze_label_distribution(\n",
-    "    r'D:\\Jabez\\golf\\fusion\\embbeding_data\\stgcnpp\\test\\labels.npy',\n",
+    "    r'D:\\Jabez\\golf\\fusion\\embedding_data\\stgcnpp\\test\\labels.npy',\n",
     "    'ST-GCN 테스트 데이터 (y_st_test)'\n",
     ")"
    ]
@@ -200,20 +200,20 @@
      "output_type": "stream",
      "text": [
       "📦 Test 샘플 10개 미리보기:\n",
-      " - ID: 20201124_General_037_DOS_A_M40_MS_001_crop, Label: 1\n",
-      " - ID: 20201124_General_037_DOS_A_M40_MS_003_crop, Label: 1\n",
-      " - ID: 20201124_General_037_DOS_A_M40_MS_006_crop, Label: 1\n",
-      " - ID: 20201124_General_037_DOS_A_M40_MS_010_crop, Label: 1\n",
-      " - ID: 20201124_General_037_DOS_A_M40_MS_011_crop, Label: 1\n",
-      " - ID: 20201124_General_037_DOS_A_M40_MS_016_crop, Label: 1\n",
-      " - ID: 20201124_General_037_DOS_A_M40_MS_018_crop, Label: 1\n",
-      " - ID: 20201124_General_037_DOS_A_M40_MS_022_crop, Label: 1\n",
-      " - ID: 20201124_General_037_DOS_A_M40_MS_030_crop, Label: 1\n",
-      " - ID: 20201124_General_037_DOS_A_M40_MS_031_crop, Label: 1\n",
+      " - ID: 20201118_General_017_DOR_A_M40_MM_053_crop, Label: 1\n",
+      " - ID: 20201130_General_058_DOS_A_M30_MM_039_crop, Label: 0\n",
+      " - ID: 20201123_General_030_DOS_A_M40_MM_007_crop, Label: 0\n",
+      " - ID: 20201130_General_058_DOS_A_M30_MM_081_crop, Label: 0\n",
+      " - ID: 20201130_General_058_DOS_A_M30_MM_054_crop, Label: 0\n",
+      " - ID: 20201202_General_068_DOS_A_M40_MM_017_crop, Label: 0\n",
+      " - ID: 20201202_General_065_DOC_A_M40_MM_032_crop, Label: 0\n",
+      " - ID: 20201124_General_034_DOS_A_M40_MM_052_crop, Label: 1\n",
+      " - ID: 20201211_General_122_DOC_A_M50_MM_015_crop, Label: 1\n",
+      " - ID: 20201117_General_006_DOC_A_M40_BS_003_crop, Label: 0\n",
       "\n",
       "📊 전체 레이블 분포:\n",
-      "  0 (bad/worst): 137\n",
-      "  1 (normal/good/great): 138\n"
+      "  0 (bad/worst): 55\n",
+      "  1 (normal/good/great): 75\n"
      ]
     }
    ],
@@ -223,7 +223,7 @@
     "from collections import Counter\n",
     "\n",
     "# 1) test pkl 경로 설정\n",
-    "PKL_PATH = Path(r\"D:\\golfDataset\\dataset\\test\\crop_pkl\\skeleton_dataset_test.pkl\")\n",
+    "PKL_PATH = Path(r\"D:\\golfDataset\\dataset\\crop_pkl\\skeleton_dataset_test.pkl\")\n",
     "\n",
     "# 2) PKL 로드\n",
     "with open(PKL_PATH, 'rb') as f:\n",
