--- a/golf/preprocessing/video_processing/video_crop_and_csv_merged.ipynb
+++ b/golf/preprocessing/video_processing/video_crop_and_csv_merged.ipynb
@@ -25,7 +25,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "train/balanced_true:   7%|▋         | 83/1235 [1:09:12<14:20:44, 44.83s/it]"
+      "train/balanced_true:  19%|█▉        | 234/1235 [2:58:17<15:41:42, 56.45s/it]"
      ]
     }
    ],
@@ -172,6 +172,11 @@
     "        name = vid.stem\n",
     "        crop_csv  = CROP_KP_DIR / f\"{name}_crop.csv\"\n",
     "        crop_mp4  = CROP_VIDEO_DIR / f\"{name}_crop.mp4\"\n",
+    "\n",
+    "        # 이미 csv가 있으면 패스\n",
+    "        if crop_csv.exists():\n",
+    "            # print(f\"✅ 이미 처리됨: {crop_csv.name}\")\n",
+    "            continue\n",
     "\n",
     "        raw_dir = TMP_JSON_DIR / f\"raw_{name}\"\n",
     "        run_openpose(vid, raw_dir)\n",
