--- a/golf/preprocessing/video_processing/video_crop_and_csv_merged.ipynb
+++ b/golf/preprocessing/video_processing/video_crop_and_csv_merged.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "cf740e9e",
    "metadata": {},
    "outputs": [
@@ -18,14 +18,37 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "train/balanced_true:   0%|          | 0/1235 [00:00<?, ?it/s]"
+      "train/balanced_true: 100%|██████████| 1235/1235 [00:01<00:00, 625.61it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "⚠️  No valid person in 20201127_General_054_DOC_A_F30_SM_055.mp4\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "train/balanced_true:  19%|█▉        | 234/1235 [2:58:17<15:41:42, 56.45s/it]"
+      "train/false: 100%|██████████| 408/408 [00:00<00:00, 33825.03it/s]\n",
+      "test/balanced_true: 100%|██████████| 148/148 [00:00<00:00, 22918.85it/s]\n",
+      "test/false:  30%|██▉       | 44/148 [02:31<11:30,  6.64s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "⚠️  No valid person in 20201210_General_112_DOC_A_M20_MM_045.mp4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "test/false: 100%|██████████| 148/148 [45:53<00:00, 18.61s/it]\n"
      ]
     }
    ],
@@ -205,19 +228,11 @@
     "            root = base / folder\n",
     "            preprocess_all(root)\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2ac2e5ef",
-   "metadata": {},
-   "source": [
-    "# test"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "timesformer",
+   "display_name": "mmaction",
    "language": "python",
    "name": "python3"
   },
@@ -231,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
